--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 with a smile, “I love you right up to the moon
                 AND BACK.”</p>
         </section>
+
+        <img src="images/base.webp" alt="Base Image" class="base-img">
+
     </main>
 
     <script src="script.js"></script>
