--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <title>GUESS HOW MUCH I LOVE YOU</title>
     <link rel="icon"  href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="styles1.css" id="theme1" disabled>
-    <link rel="stylesheet" href="styles2.css" id="theme2" disabled>
-    <link rel="stylesheet" href="styles3.css" id="theme3" disabled>
-    <link rel="stylesheet" href="styles4.css" id="theme4" disabled>
+    <link rel="stylesheet" href="styles1.css" class="theme"  disabled>
+    <link rel="stylesheet" href="styles2.css" class="theme"  disabled>
+    <link rel="stylesheet" href="styles3.css" class="theme"  disabled>
+    <link rel="stylesheet" href="styles4.css" class="theme"  disabled>
 </head>
 <body>
 
-    <button id="swapStyleButton" style="position: fixed; top: 10px; left: 10px; z-index: 1000;">swap</button>
+    <button class="swap-style-button" style="position: fixed; top: 10px; left: 10px;">swap</button>
 
-    <header>      
-     
-
-</header>
+    <header>
+        <p class="current-season">Current Season: </p>
+        <a href="#" class="what-is-this">What is this?</a>
+    </header>
 
 <h1>GUESS HOW MUCH I LOVE YOU</h1> 
 <h2>by Sam McBratney</h2>
-    <main class="poem-container" id="poemContainer">
+<main class="poem-container">
 
-        <section class="poem-section" id="poemTemplate">
+    <section class="poem-section">
             <p class="poem">Little Nutbrown Hare, who was going to bed,
                 held on tight to Big Nutbrown Hare’s very
                 long ears. He wanted to be sure that Big
