--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>GUESS HOW MUCH I LOVE YOU</title>
     <link rel="icon"  href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="styles1.css" class="theme"  disabled>
-    <link rel="stylesheet" href="styles2.css" class="theme"  disabled>
-    <link rel="stylesheet" href="styles3.css" class="theme"  disabled>
-    <link rel="stylesheet" href="styles4.css" class="theme"  disabled>
+    <link rel="stylesheet" href="styles1.css" class="theme" data-season="Spring" disabled>
+    <link rel="stylesheet" href="styles2.css" class="theme" data-season="Summer" disabled>
+    <link rel="stylesheet" href="styles3.css" class="theme" data-season="Autumn" disabled>
+    <link rel="stylesheet" href="styles4.css" class="theme" data-season="Winter" disabled>
+    
 </head>
 <body>
 
