--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-
-    <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='cache-control' content='no-cache'> 
 <meta http-equiv='expires' content='0'> 
 <meta http-equiv='pragma' content='no-cache'>
 
@@ -26,10 +25,15 @@
 </head>
 <body>
 
-    <button class="swap-style-button" style="position: fixed; top: 10px; left: 10px;">swap</button>
+    <button class="swap-style-button" style="position: fixed; top: 70px; left: 10px;">swap</button>
 
-    <header>
-        <p class="current-season">Current Season: </p>
+    <header class="fixed-header">
+        <span class="current-season">Current Season: Spring</span>
+        
+        <div class="header-content">
+            <img src="images/logo.webp" alt="Logo" class="logo">
+        </div>
+
         <a href="#" class="what-is-this">What is this?</a>
     </header>
 
