--- a/index.html
+++ b/index.html
@@ -93,6 +93,53 @@
                 Then he lay down close by and whispered
                 with a smile, “I love you right up to the moon
                 AND BACK.”</p>
+            <p class="poem">Guess how much I love you.
+                No, it isn’t as much as the glimmering stars above.
+                Nor even half the size of the vast ocean.
+                It doesn’t even amount to the numerous grains of sand.
+                Guess how much I love you.
+                It can’t be tantamount to the reach of light.
+                Never as deep as the darkest trench of the sea.
+                The warmth of fire is not even justifiable.</p>
+             <p class="poem">Guess how much I love you.
+                It’s nothing like the comforting love of a mother,
+                Nor the embracing care of the father,
+                Even the camaraderie of siblings isn’t comparable.</p>   
+            <p class="poem">Let me tell you just how much I love you.
+                My love for you can’t surmount to any one thing
+                For there be naught to measure how much I care for you.
+                The love inside me, your love,
+                Breathes greater than any measure of reality.
+                Such pure care, so deep understanding, everlasting safety,
+                This my soul speaks. This my love is.</p> 
+            <p class="poem">
+                In a lush meadow surrounded by swaying grasses and delicate wildflowers, two furry hares named Nutbrown and Little Nutbrown shared a special bond. Nutbrown, the older and wiser of the two, loved his energetic companion, Little Nutbrown, very much. Together, they went on adventures as big as the sky itself.
+            </p> 
+            <p class="poem">One sunny morning, as the warm sun filled the meadow, Little Nutbrown turned to Nutbrown with a sparkle in his eye. “Guess how much I love you?” he asked, excited and curious. Nutbrown smiled at Little Nutbrown, his eyes shining with love. “Oh, I don’t know,” he replied kindly. “How much do you love me?”</p> 
+            <p class="poem">Little Nutbrown stretched his arms wide, his tiny paws reaching as far as they could. “I love you all the way to the tip of my toes!” he exclaimed earnestly. Nutbrown chuckled softly, feeling warm inside. He stretched his own arms wide, his paws reaching out to meet Little Nutbrown’s. “Well, I love you all the way to the tip of your toes and back,” he said, promising his love.</p> 
+            <p class="poem">One evening, as the sun set and painted the world in pink and orange, Little Nutbrown looked up at Nutbrown thoughtfully. “Guess how much I love you,” he whispered softly. Nutbrown looked at Little Nutbrown, his eyes full of love. “I’m not sure,” he replied gently. “How much do you love me?”</p> 
+            <p class="poem">Little Nutbrown snuggled close to Nutbrown, his heart beating with his friend’s. “I love you as far as the river goes and as high as the mountains touch the sky,” he said, his words as deep as a thousand sunsets.</p> 
+            <p class="poem">Nutbrown smiled at Little Nutbrown, his heart full of love as vast as the universe. He hugged his friend close. “I love you as far as the river goes and as high as the mountains touch the sky,” he whispered, promising his love forever.</p> 
+            <p class="poem">And so, in the meadow where wildflowers swayed and the sun and moon shared their gentle light, Nutbrown and Little Nutbrown learned that love didn’t need words. It was a bond that went beyond the world’s limits, a connection felt in every heartbeat and glance shared.</p> 
+            <p class="poem">I want you to believe how
+                I love you. So truly, without a doubt
+                Trust this feeling I have. Know this dear,
+                Your value to me, so precious you are.
+                Undeniable. Irreplaceable in this life you are
+                Such is the way in which
+                I love you.</p>
+
+         
+
+
+
+
+
+
+
+
+
+
         </section>
 
         <img src="images/base.webp" alt="Base Image" class="base-img">
