--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 
 <h1>GUESS HOW MUCH I LOVE YOU</h1> 
 <h2>by Sam McBratney</h2>
+<div class="image-container">
+    <img src="images/pic1.webp" alt="Image 1" class="scroll-image right">
+    <img src="images/pic2.webp" alt="Image 2" class="scroll-image left">
+    <img src="images/pic3.webp" alt="Image 3" class="scroll-image right">
+    <img src="images/pic4.webp" alt="Image 4" class="scroll-image left">
+    <img src="images/pic5.webp" alt="Image 5" class="scroll-image right">
+    <img src="images/pic6.webp" alt="Image 6" class="scroll-image left">
+    <img src="images/pic7.webp" alt="Image 7" class="scroll-image right">
+    <img src="images/pic8.webp" alt="Image 8" class="scroll-image left">
+    <img src="images/pic9.webp" alt="Image 9" class="scroll-image right">
+    <img src="images/pic10.webp" alt="Image 10" class="scroll-image left">
+  </div>
+  
 <main class="poem-container">
 
     <section class="poem-section">
