--- a/index.html
+++ b/index.html
@@ -162,18 +162,12 @@
         </div>
 
 
-        <div class="thumbnail-carousel">
-            <button class="carousel-button prev" onclick="scrollCarousel(-1)">&#10094;</button>
-            
-            <div class="thumbnails">
-                <img src="images/car1.webp" alt="Car 1">
-                <img src="images/car2.webp" alt="Car 2">
-                <img src="images/car3.webp" alt="Car 3">
-                <img src="images/car4.webp" alt="Car 4">
-                <img src="images/car5.webp" alt="Car 5">
+        <div class="animal-fact-container">
+            <h2>Random Animal Fact</h2>
+            <div class="animal-fact">
+                <!-- Animal fact will be displayed here -->
+                <p>Loading animal fact...</p>
             </div>
-            
-            <button class="carousel-button next" onclick="scrollCarousel(1)">&#10095;</button>
         </div>
     </main>
 
