--- a/index.html
+++ b/index.html
@@ -162,13 +162,12 @@
         </div>
 
 
-        <div class="animal-fact-container">
-            <h2>Random Animal Fact</h2>
-            <div class="animal-fact">
-                <!-- Animal fact will be displayed here -->
-                <p>Loading animal fact...</p>
-            </div>
-        </div>
+ <!-- Button to fetch the animal fact -->
+<button class="get-animal-fact">Get Animal Fact</button>
+
+<!-- Element to display the animal fact -->
+<div class="animal-fact"></div>
+
     </main>
 
     <script src="script.js"></script>
