--- a/index.html
+++ b/index.html
@@ -162,12 +162,14 @@
         </div>
 
 
- <!-- Button to fetch the animal fact -->
-<button class="get-animal-fact">Get Animal Fact</button>
-
-<!-- Element to display the animal fact -->
-<div class="animal-fact"></div>
-
+        <div class="quote-container">
+            <!-- Button to trigger fetching a random quote -->
+            <button class="quote-button">Get Random Quote</button>
+        
+            <!-- Element to display the fetched quote -->
+            <p class="quote-display">Loading quote...</p>
+        </div>
+        
     </main>
 
     <script src="script.js"></script>
