--- a/index.html
+++ b/index.html
@@ -163,13 +163,11 @@
 
 
         <div class="quote-container">
-            <!-- Button to trigger fetching a random quote -->
+            <h2>here are some quotes for inspiration if you want to create your own poems</h2>
             <button class="quote-button">Get Random Quote</button>
-        
-            <!-- Element to display the fetched quote -->
             <p class="quote-display">Loading quote...</p>
         </div>
-        
+
     </main>
 
     <script src="script.js"></script>
