--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <button class="swap-style-button" style="position: fixed; top: 2.6%; left: 15%;">swap</button>
+    <button class="swap-style-button" >swap</button>
 
     <header class="fixed-header">
         <span class="current-season">Current Season: Spring</span>
