--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>GUESS HOW MUCH I LOVE YOU</title>
-    <link rel="icon"  href="/images/favicon.ico">
+    <link rel="icon" href="https://guil913.github.io/assignment2/images/favicon.ico">
     <link rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="styles1.css" class="theme" data-season="Spring" disabled>
     <link rel="stylesheet" href="styles2.css" class="theme" data-season="Summer" disabled>
